# pydynox

./: .gitignore  Cargo.toml  README.md  pr-dataclass-integration.md  pr-model-config.md  pyproject.toml  zensical.toml
.ai/: coding-guidelines.md  project-context.md  testing-guidelines.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codspeed.yml  docs.yml  release.yml
ADR/: README.md
benchmark/: __init__.py  benchmark.py  conftest.py
docs/: index.md
docs/examples/compression/: algorithm_options.py  basic_compression.py  compression_options.py
docs/examples/encryption/: basic_encryption.py  encryption_context.py  encryption_modes.py
docs/examples/indexes/: basic_gsi.py
docs/examples/models/: basic_model.py  with_defaults.py
docs/examples/optimistic_locking/: async_version.py
docs/guides/: 00-client.md  01-models.md  03-crud.md  04-batch.md  05-transactions.md  06-rate-limiting.md  07-hooks.md  08-pydantic.md  09-exceptions.md  10-tables.md  11-encryption.md  12-iam-permissions.md  13-size-calculator.md  async.md  attributes.md  batch.md  client.md  crud.md  dataclass.md  encryption.md  exceptions.md  iam-permissions.md  indexes.md  models.md  observability.md  pydantic.md  transactions.md
docs/overrides/: main.html
python/pydynox/: __init__.py  _compression.py  _encryption.py  attributes.py  client.py  config.py  exceptions.py  hooks.py  indexes.py  model.py  pydantic_integration.py  pydynox_core.pyi  query.py  rate_limit.py  size.py
python/pydynox/_internal/: _metrics.py
python/pydynox/attributes/: __init__.py  encrypted.py
python/pydynox/integrations/: __init__.py  pydantic.py
site/: 404.html  index.html  search.json  sitemap.xml
site/examples/hooks/: all_hooks.py  validation.py
site/examples/models/: crud_operations.py
site/examples/ttl/: basic_ttl.py  session_example.py
site/getting-started/: index.html
site/guides/01-models/: index.html
site/guides/03-crud/: index.html
site/guides/04-batch/: index.html
site/guides/05-transactions/: index.html
site/guides/06-rate-limiting/: index.html
site/guides/07-hooks/: index.html
src/: basic_operations.rs  batch_operations.rs  client.rs  conversions.rs  encryption.rs  errors.rs  lib.rs  table_operations.rs  transaction_operations.rs
src/basic_operations/: get.rs  mod.rs  query.rs
tests/integration/: conftest.py
tests/python/: test_attributes.py  test_compression.py  test_config.py  test_encryption.py  test_hooks.py  test_model.py  test_pydantic.py  test_size.py  test_ttl.py
tests/unit/: test_config.py  test_consistent_read.py  test_encryption.py  test_indexes.py  test_metrics.py  test_model.py  test_pydantic.py  test_query.py  test_ttl.py
(+17 files in other folders)
