[package]
name = "pydynox"
version = "0.5.0"
edition = "2021"
authors = ["Leandro Cavalcante Damascena <leandro.damascena@gmail.com>"]
description = "A fast DynamoDB ORM for Python with a Rust core"
license = "MIT"
repository = "https://github.com/leandrodamascena/pydynox"
homepage = "https://github.com/leandrodamascena/pydynox"
documentation = "https://leandrodamascena.github.io/pydynox"
readme = "README.md"
keywords = ["dynamodb", "orm", "aws", "database", "pyo3"]
categories = ["database", "api-bindings"]

[lib]
name = "pydynox"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
aws-sdk-dynamodb = "1.54"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
base64 = "0.22"
once_cell = "1.20"

[dev-dependencies]
pyo3 = { version = "0.27", features = ["auto-initialize"] }

[profile.release]
lto = true
codegen-units = 1
