[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pydynox"
version = "0.2.0"
description = "A fast DynamoDB ORM for Python with a Rust core"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Leandro Cavalcante Damascena", email = "leandro.damascena@gmail.com" },
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Database",
]
keywords = ["dynamodb", "orm", "aws", "rust", "pyo3"]

[project.optional-dependencies]
pydantic = ["pydantic>=2.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-benchmark>=4.0",
    "pytest-codspeed>=4.2.0",
    "hypothesis>=6.100",
    "moto[dynamodb,server]>=5.0",
    "boto3>=1.35",
    "pydantic>=2.0",
    "pynamodb>=6.0",
    "ruff>=0.8",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "pydynox.pydynox_core"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
